[gd_scene load_steps=2 format=3 uid="uid://hco7k33v1ik5"]

[ext_resource type="Script" path="res://scripts/injury_updates.gd" id="1_px7gt"]

[node name="InjuryUpdates" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_px7gt")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Injury Report"
horizontal_alignment = 1

[node name="Button" type="Button" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 25
text = "Continue"

[node name="NoInjuryLabel" type="Label" parent="ColorRect/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Congrats! You survived injury free!"

[node name="InjuryDescriptionContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="Label3" type="Label" parent="ColorRect/MarginContainer/InjuryDescriptionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Damn son, you done fucked up!"

[node name="InjuryDescriptionLabel" type="Label" parent="ColorRect/MarginContainer/InjuryDescriptionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Body injured (-1)"

[connection signal="pressed" from="ColorRect/MarginContainer/Button" to="." method="_on_button_pressed"]
